--- a/vue-project/package.json
+++ b/vue-project/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-vue": "^9.23.0",
     "prettier": "^3.2.5",
     "start-server-and-test": "^2.0.4",
+    "tailwindcss": "^3.4.7",
     "vite": "^5.3.1"
   }
 }
